# FruSleeps

./: .gitignore  README.MD  README.md  __init__.py  auth.py  config.py  db.py  fly.toml  pyproject.toml  requirements.txt  schema.sql  sleepdash.py  sleeplab.py  uwsgi.ini
FruSleeps/: __init__.py  about.py  auth.py  config.py  env.py  models.py  sleepdash.py  sleeplab.py  wsgi.py
FruSleeps/forms/: authforms.py
FruSleeps/static/: blueberry icon.ico:Zone.Identifier  style.css
FruSleeps/templates/: _formhelpers.html  base.html
FruSleeps/templates/about/: about.html
FruSleeps/templates/auth/: addparents.html  login2.html  register.html  register2.html
FruSleeps/templates/sleepdash/: sleepdash.html
FruSleeps/templates/sleeplab/: confirm.html  index.html  timetest.html
migrations/versions/: a3155895b0c7_first_migration_of_gosh_so_many_tries.py
obsoleteCode/: frusleeps.py
plotlydash/: dashboard.py
static/: style.css
templates/: base.html
templates/auth/: addparents.html  login.html  register.html
templates/sleepdash/: sleepdash.html
templates/sleeplab/: confirm.html  index.html  sleepstats.html
